--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^14.2.0",
     "devextreme": "^22.1.3",
     "devextreme-angular": "^22.1.3",
+    "devextreme-aspnet-data-nojquery": "^2.8.6",
     "devextreme-schematics": "^1.4.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
